# lektor-assistant

./: .gitignore  README.rst  lektor_assistant.py  pyproject.toml  requirements.txt  setup.cfg
assets/: lektor_assistant.css
templates/: landing.html  layout.html
tests/: test_lektor_assistant.py
